--- a/pruebaApi/templates/register.html
+++ b/pruebaApi/templates/register.html
@@ -1,16 +1,23 @@
-<form ng-submit="">
+<form>
     <div class="form-group">
-        <label for="formGroupExampleInput">Nombre</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre" ng-model="">
+        <label for="nombre">Nombre</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre" placeholder="Example input"
+            ng-model="nombre">
     </div>
     <div class="form-group">
         <label for="formGroupExampleInput2">Edad</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Edad" ng-model="">
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Edad" ng-model="edad">
     </div>
     <div class="form-group">
         <label for="formGroupExampleInput2">Nacimiento</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Fecha de Nacimiento" ng-model="">
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Fecha de Nacimiento"
+            ng-model="nacimiento">
     </div>
-    <button type="submit" class="btn btn-primary" ng-click="httPost()">Ingresar</button>
-
+    <div class="form-group">
+        <label for="formGroupExampleInput2">DPI</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Fecha de Nacimiento"
+            ng-model="dpi">
+    </div>
+    <button type="button" class="btn btn-primary" ng-click="postQuisui()">Guardar
+        Registro</button>
 </form>
